--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap");
+
+@font-face {
+  font-family: "Alice";
+  src:
+    url("../../public/fonts/Alice/Alice.eot?") format("eot"),
+    url("../../public/fonts/Alice/Alice.woff") format("woff"),
+    url("../../public/fonts/Alice/Alice.ttf") format("truetype"),
+    url("../../public/fonts/Alice/Alice.svg#Alice") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
 @import "tailwindcss";
 
 :root {
@@ -20,6 +32,7 @@ section {
 }
 
 @theme {
+  --font-alice: "Alice", serif;
   --font-sans: "Roboto Slab", serif;
   --color-white-50: #d9ecff;
   --color-black-50: #1c1c21;
@@ -118,7 +131,7 @@ section {
     }
 
     .logo {
-      @apply text-white-50 text-xl md:text-2xl font-semibold transition-transform duration-300 hover:scale-105;
+      @apply flex items-center space-x-1 font-semibold transition-transform duration-300 hover:scale-105;
     }
 
     nav.desktop {
