fix: path using fonts instead of public

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,10 +3,10 @@
 @font-face {
   font-family: "Alice";
   src:
-    url("../../public/fonts/Alice/Alice.eot?") format("eot"),
-    url("../../public/fonts/Alice/Alice.woff") format("woff"),
-    url("../../public/fonts/Alice/Alice.ttf") format("truetype"),
-    url("../../public/fonts/Alice/Alice.svg#Alice") format("svg");
+    url("/fonts/Alice/Alice.eot?") format("eot"),
+    url("/fonts/Alice/Alice.woff") format("woff"),
+    url("/fonts/Alice/Alice.ttf") format("truetype"),
+    url("/fonts/Alice/Alice.svg#Alice") format("svg");
   font-weight: normal;
   font-style: normal;
 }
