--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -44,10 +44,10 @@ section {
 
 @layer utilities {
   .flex-center {
-    @apply flex justify-center items-center;
+    @apply flex items-center justify-center;
   }
   .flex-col-center {
-    @apply flex flex-col justify-center items-center;
+    @apply flex flex-col items-center justify-center;
   }
 }
 
@@ -61,11 +61,11 @@ section {
   }
 
   .section-padding {
-    @apply px-5 md:px-10 md:mt-40 mt-20;
+    @apply mt-20 px-5 md:mt-40 md:px-10;
   }
 
   .mt-responsive {
-    @apply xl:mt-20 md:mt-0 mt-40;
+    @apply mt-40 md:mt-0 xl:mt-20;
   }
 
   /* General Grids */
@@ -74,56 +74,56 @@ section {
   }
 
   .grid-2-cols {
-    @apply grid grid-cols-1 md:grid-cols-2 gap-6;
+    @apply grid grid-cols-1 gap-6 md:grid-cols-2;
   }
 
   .grid-3-cols {
-    @apply grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-6;
+    @apply grid grid-cols-1 gap-6 md:grid-cols-2 xl:grid-cols-3;
   }
 
   .grid-3-cols-md-tight {
-    @apply grid grid-cols-1 md:grid-cols-3 gap-5 md:gap-0;
+    @apply grid grid-cols-1 gap-5 md:grid-cols-3 md:gap-0;
   }
 
   .grid-4-cols {
-    @apply grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-7;
+    @apply grid grid-cols-1 gap-7 md:grid-cols-2 xl:grid-cols-4;
   }
 
   .grid-12-cols {
-    @apply grid grid-cols-1 xl:grid-cols-12 gap-10;
+    @apply grid grid-cols-1 gap-10 xl:grid-cols-12;
   }
 
   .hero-layout {
-    @apply relative z-10 xl:mt-20 mt-32 md:h-dvh h-[80vh] flex xl:items-center items-start justify-center;
+    @apply relative z-10 mt-32 flex h-[80vh] items-start justify-center md:h-dvh xl:mt-20 xl:items-center;
   }
 
   .hero-text {
-    @apply flex flex-col justify-center md:text-[60px] text-[30px] font-semibold relative z-10 pointer-events-none;
+    @apply pointer-events-none relative z-10 flex flex-col justify-center text-[30px] font-semibold md:text-[60px];
     img {
-      @apply size-8 md:size-10 object-contain;
+      @apply size-8 object-contain md:size-10;
     }
     .slide {
-      @apply absolute pt-0 px-2 md:px-5 py-[30px] h-[48px] md:h-[78px] md:translate-y-1 translate-y-0 overflow-hidden;
+      @apply absolute h-[48px] translate-y-0 overflow-hidden px-2 py-[30px] pt-0 md:h-[78px] md:translate-y-1 md:px-5;
     }
   }
 
   .hero-badge {
-    @apply bg-black-200 py-2 px-4 rounded-full w-fit text-sm md:text-base text-nowrap;
+    @apply bg-black-200 w-fit rounded-full px-4 py-2 text-sm text-nowrap md:text-base;
   }
 
   .hero-3d-layout {
-    @apply xl:w-[70%] w-full h-full min-h-[50vh] absolute xl:-top-20 top-24 xl:-right-20 right-0;
+    @apply absolute top-24 right-0 h-full min-h-[50vh] w-full xl:-top-20 xl:-right-20 xl:w-[70%];
   }
 
   .navbar {
-    @apply fixed w-full left-1/2 py-5 px-5 md:px-20 -translate-x-1/2 z-[100] transition-all duration-300 ease-in-out;
+    @apply fixed left-1/2 z-[100] w-full -translate-x-1/2 px-5 py-5 transition-all duration-300 ease-in-out md:px-20;
 
     &.scrolled {
       @apply top-0 bg-black;
     }
 
     &.not-scrolled {
-      @apply md:top-10 top-0 bg-transparent;
+      @apply top-0 bg-transparent md:top-10;
     }
 
     .inner {
@@ -135,7 +135,7 @@ section {
     }
 
     nav.desktop {
-      @apply hidden lg:flex items-center;
+      @apply hidden items-center lg:flex;
 
       ul {
         @apply flex space-x-8;
@@ -148,7 +148,7 @@ section {
           }
 
           .underline {
-            @apply absolute -bottom-1 left-0 w-0 h-0.5 bg-white transition-all duration-300 group-hover:w-full;
+            @apply absolute -bottom-1 left-0 h-0.5 w-0 bg-white transition-all duration-300 group-hover:w-full;
           }
         }
       }
@@ -158,59 +158,59 @@ section {
       @apply flex;
 
       .inner {
-        @apply px-5 py-2 rounded-lg bg-white text-black group-hover:bg-black-50 transition-colors duration-300;
+        @apply group-hover:bg-black-50 rounded-lg bg-white px-5 py-2 text-black transition-colors duration-300;
 
         span {
-          @apply group-hover:text-white transition-colors duration-300;
+          @apply transition-colors duration-300 group-hover:text-white;
         }
       }
     }
   }
 
   .app-showcase {
-    @apply w-full px-5 md:px-20 py-10 md:py-20 flex items-center justify-center;
+    @apply flex w-full items-center justify-center px-5 py-10 md:px-20 md:py-20;
 
     .showcaselayout {
-      @apply flex xl:flex-row flex-col gap-10 justify-between;
+      @apply flex flex-col justify-between gap-10 xl:flex-row;
     }
 
     .first-project-wrapper {
-      @apply h-full flex flex-col justify-between xl:w-[60%];
+      @apply flex h-full flex-col justify-between xl:w-[60%];
 
       .image-wrapper {
-        @apply xl:h-[70vh] md:h-[50vh] h-96 relative;
+        @apply relative h-96 md:h-[50vh] xl:h-[70vh];
 
         img {
-          @apply w-full h-full object-cover rounded-xl absolute inset-0;
+          @apply absolute inset-0 h-full w-full rounded-xl object-cover;
         }
       }
 
       .text-content {
-        @apply space-y-5 mt-5;
+        @apply mt-5 space-y-5;
 
         .badges {
-          @apply flex gap-2 mb-4;
+          @apply mb-4 flex gap-2;
         }
 
         h2 {
-          @apply text-2xl md:text-3xl lg:text-4xl font-bold;
+          @apply text-2xl font-bold md:text-3xl lg:text-4xl;
         }
       }
     }
 
     .project-list-wrapper {
-      @apply flex md:flex-row flex-col xl:flex-col gap-10 xl:w-[40%];
+      @apply flex flex-col gap-10 md:flex-row xl:w-[40%] xl:flex-col;
 
       .image-wrapper {
-        @apply xl:h-[37vh] md:h-52 lg:h-72 h-64 relative rounded-xl xl:px-5 2xl:px-12 py-0;
+        @apply relative h-64 rounded-xl py-0 md:h-52 lg:h-72 xl:h-[37vh] xl:px-5 2xl:px-12;
       }
 
       img {
-        @apply w-full h-full object-contain rounded-xl;
+        @apply h-full w-full rounded-xl object-contain;
       }
 
       h2 {
-        @apply text-lg md:text-xl lg:text-2xl font-semibold mt-5;
+        @apply mt-5 text-lg font-semibold md:text-xl lg:text-2xl;
       }
     }
   }
@@ -220,89 +220,85 @@ section {
   }
 
   .cta-button {
-    @apply px-4 py-4 rounded-lg bg-black-200 flex justify-center items-center relative cursor-pointer overflow-hidden;
+    @apply bg-black-200 relative flex cursor-pointer items-center justify-center overflow-hidden rounded-lg px-4 py-4;
 
     .bg-circle {
-      @apply absolute -right-10 origin-center top-1/2 -translate-y-1/2 
-        w-[120%] h-[120%] group-hover:size-10 group-hover:right-10
-        rounded-full bg-white-50 transition-all duration-500;
+      @apply bg-white-50 absolute top-1/2 -right-10 h-[120%] w-[120%] origin-center -translate-y-1/2 rounded-full transition-all duration-500 group-hover:right-10 group-hover:size-10;
     }
 
     .text {
-      @apply uppercase text-xs md:text-lg text-black transition-all duration-500
-        group-hover:text-white-50 group-hover:-translate-x-5 xl:translate-x-0 -translate-x-5;
+      @apply group-hover:text-white-50 -translate-x-5 text-xs text-black uppercase transition-all duration-500 group-hover:-translate-x-5 md:text-lg xl:translate-x-0;
     }
 
     .arrow-wrapper {
-      @apply group-hover:bg-white-50 size-10 rounded-full absolute right-10 top-1/2 
-        -translate-y-1/2 flex justify-center items-center overflow-hidden;
+      @apply group-hover:bg-white-50 absolute top-1/2 right-10 flex size-10 -translate-y-1/2 items-center justify-center overflow-hidden rounded-full;
 
       img {
-        @apply size-5 xl:-translate-y-32 translate-y-0 animate-bounce group-hover:translate-y-0 transition-all duration-500;
+        @apply size-5 translate-y-0 animate-bounce transition-all duration-500 group-hover:translate-y-0 xl:-translate-y-32;
       }
     }
   }
 
   .card-border {
-    @apply border border-black-50 bg-black-100;
+    @apply border-black-50 bg-black-100 border;
   }
 
   .marquee-item {
-    @apply md:w-40 w-32;
+    @apply w-32 md:w-40;
   }
 
   .timeline-wrapper {
-    @apply absolute top-0 xl:left-[35.5vw] md:left-10 left-5 h-full flex justify-center;
+    @apply absolute top-0 left-5 flex h-full justify-center md:left-10 xl:left-[35.5vw];
   }
 
   .timeline {
-    @apply absolute z-30 h-[110%] -top-10 w-14 md:w-28 bg-black;
+    @apply absolute -top-10 z-30 h-[110%] w-14 bg-black md:w-28;
   }
 
   .timeline-logo {
-    @apply md:size-20 size-10 flex-none rounded-full flex justify-center items-center md:-translate-y-7 border border-black-50 bg-black-100;
+    @apply border-black-50 bg-black-100 flex size-10 flex-none items-center justify-center rounded-full border md:size-20 md:-translate-y-7;
   }
 
   .exp-card-wrapper {
-    @apply flex flex-col-reverse xl:flex-row xl:gap-20 gap-10 justify-between;
+    @apply flex flex-col-reverse justify-between gap-10 xl:flex-row xl:gap-20;
   }
 
   .gradient-edge {
-    @apply w-36 h-full absolute bottom-0 z-20;
+    @apply absolute bottom-0 z-20 h-full w-36;
   }
 
   .tech-card-animated-bg {
-    @apply absolute left-0 bottom-[-100%] w-full h-full bg-[#2D3240] group-hover:bottom-0 transition-all duration-700;
+    @apply absolute bottom-[-100%] left-0 h-full w-full bg-[#2D3240] transition-all duration-700 group-hover:bottom-0;
   }
 
   .tech-card-content {
-    @apply flex flex-col md:justify-center items-center xl:gap-5 xl:h-[30vh] overflow-hidden relative z-10 group-hover:cursor-grab;
+    @apply relative z-10 flex flex-col items-center overflow-hidden group-hover:cursor-grab md:justify-center xl:h-[30vh] xl:gap-5;
 
     & p {
-      @apply text-lg 2xl:text-2xl pb-5 xl:pb-0 font-semibold text-white-50 text-center;
+      @apply text-white-50 pb-5 text-center text-lg font-semibold xl:pb-0 2xl:text-2xl;
     }
   }
 
   .tech-grid {
-    @apply grid xl:grid-cols-5 md:grid-cols-3 grid-cols-1 xl:gap-16 md:gap-10 gap-5 mt-16;
+    @apply mt-16 grid grid-cols-1 gap-5 md:grid-cols-3 md:gap-10 xl:grid-cols-4 xl:gap-16 2xl:grid-cols-7;
   }
 
   .tech-icon-wrapper {
-    @apply flex justify-center items-center w-52 h-60 relative;
+    @apply relative flex h-60 w-52 items-center justify-center;
   }
 
   form {
     label {
-      @apply block text-white-50 mb-2;
+      @apply text-white-50 mb-2 block;
     }
 
     input,
     textarea {
-      @apply w-full px-4 py-4 md:text-base text-sm placeholder:text-blue-50 bg-blue-100 rounded-md;
+      @apply w-full rounded-md bg-blue-100 px-4 py-4 text-sm placeholder:text-blue-50 md:text-base;
     }
 
     a {
-      @apply w-full py-4 bg-white text-black font-semibold rounded-md flex justify-center items-center gap-2;
+      @apply flex w-full items-center justify-center gap-2 rounded-md bg-white py-4 font-semibold text-black;
 
       img {
         @apply inline-block;
@@ -311,21 +307,21 @@ section {
   }
 
   .footer {
-    @apply my-10 md:mt-20 mt-10 text-white-50 px-5 md:px-20 xl:px-20 flex items-center justify-center;
+    @apply text-white-50 my-10 mt-10 flex items-center justify-center px-5 md:mt-20 md:px-20 xl:px-20;
 
     .footer-container {
-      @apply grid grid-cols-1 md:grid-cols-3 gap-5 md:gap-0 w-full;
+      @apply grid w-full grid-cols-1 gap-5 md:grid-cols-3 md:gap-0;
     }
 
     p {
-      @apply text-center md:text-start cursor-pointer;
+      @apply cursor-pointer text-center md:text-start;
     }
 
     .socials {
       @apply flex items-center justify-center gap-5;
 
       .icon {
-        @apply border border-black-50 bg-black-100 flex justify-center items-center rounded-xl size-10 md:size-12 cursor-pointer transition-all duration-500 hover:bg-black-50;
+        @apply border-black-50 bg-black-100 hover:bg-black-50 flex size-10 cursor-pointer items-center justify-center rounded-xl border transition-all duration-500 md:size-12;
       }
 
       img {
